--- a/local_version/front/public/css/style.css
+++ b/local_version/front/public/css/style.css
@@ -1,29 +1,16 @@
+body{
+  background-color: #faf9f4;
+}
 body>header {
+  color: #ffffff;
   display: flex;
   overflow: hidden;
-  background-color: #d4b5fd;
+  background-color:  #719fdc;
   padding: 10px 10px;
   justify-content: space-between;
-}
-/*style the header links*/
-
-.Header a {
- 
-  color: black;
-  text-align: center;
-  padding: 10px;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
-}
-.Header{
-margin: 30px 10px 10px 10px;
-}
-
-.Header a:hover {
-  background-color: #f59aff;
-  color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .streamImages {
@@ -33,9 +20,8 @@ margin: 30px 10px 10px 10px;
 }
 
   #display_image{
-    width: 375px;
-    height: 211px;
-    border: 1px solid black;
+    width: 500px;
+    height: 281px;
     background-position: center;
     background-size: cover;
   }
@@ -43,12 +29,17 @@ margin: 30px 10px 10px 10px;
   form {
     display: flex;
     justify-content: space-between;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 10px;
   }
 
-  form>div{
-    background-color: aquamarine;
-    
+  form>div {
+    box-shadow: 0px 4px 8px 0px rgba(69, 69, 69, 0.2);
+    background-color: #c5d4e8;
+
   }
+  
   .boxen{
     width: 200px;
    align-content: center;
@@ -56,7 +47,7 @@ margin: 30px 10px 10px 10px;
 
   /* Dropdown Button */
 .dropbtn {
-  background-color: #04AA6D;
+  background-color: #454857;
   color: white;
   padding: 16px;
   font-size: 20px;
@@ -71,7 +62,7 @@ margin: 30px 10px 10px 10px;
 .dropdown {
   position: relative;
   display: inline-block;
-  
+  margin-bottom: 5px;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -84,7 +75,6 @@ margin: 30px 10px 10px 10px;
   z-index: 1;
   padding: 4px;
 }
-
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
@@ -111,7 +101,7 @@ margin: 30px 10px 10px 10px;
 }
 
 .dropdown-content input:checked {
-	background-color: #04AA6D;
+	background-color: #719fdc;
 	color: #fff;
 	box-shadow: 0 1px 1px #0000002e;
 	text-shadow: 0 1px 0px #79485f7a;
