--- a/local_version/front/public/css/style.css
+++ b/local_version/front/public/css/style.css
@@ -1,16 +1,29 @@
-body{
-  background-color: #faf9f4;
-}
 body>header {
-  color: #ffffff;
   display: flex;
   overflow: hidden;
-  background-color:  #719fdc;
+  background-color: #d4b5fd;
   padding: 10px 10px;
   justify-content: space-between;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+/*style the header links*/
+
+.Header a {
+ 
+  color: black;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+.Header{
+margin: 30px 10px 10px 10px;
+}
+
+.Header a:hover {
+  background-color: #f59aff;
+  color: black;
 }
 
 .streamImages {
@@ -76,96 +89,9 @@ body>header {
 /* End of dropdown */
 
   #display_image{
-    width: 500px;
-    height: 281px;
+    width: 375px;
+    height: 211px;
+    border: 1px solid black;
     background-position: center;
     background-size: cover;
   }
-
-  form {
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    margin-left: 10%;
-    margin-top: 10px;
-  }
-
-  form>div {
-    box-shadow: 0px 4px 8px 0px rgba(69, 69, 69, 0.2);
-    background-color: #c5d4e8;
-
-  }
-  
-  .boxen{
-    width: 200px;
-   align-content: center;
-  }
-
-  /* Dropdown Button */
-.dropbtn {
-  background-color: #454857;
-  color: white;
-  padding: 16px;
-  font-size: 20px;
-  border: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		"Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-  margin-bottom: 5px;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: relative;
-  background-color: #454857;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  padding: 4px;
-}
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown-content input {
-	width: auto;
-	height: 100%;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	outline: none;
-	cursor: pointer;
-	padding: 4px 8px;
-	background: #454857;
-  transition: all 100ms linear;
-
-}
-.dropdown-content label {
-  color: white;
-  font-size: 14px;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		"Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	
-}
-
-.dropdown-content input:checked {
-	background-color: #719fdc;
-	color: #fff;
-	box-shadow: 0 1px 1px #0000002e;
-	text-shadow: 0 1px 0px #79485f7a;
-}
-
-.radio input:before {
-	content: attr(label);
-	display: inline-block;
-	text-align: center;
-	width: 100%;
-}
