--- a/local_version/front/public/css/style.css
+++ b/local_version/front/public/css/style.css
@@ -131,6 +131,7 @@ body>header {
   z-index: 1;
   padding: 4px;
 }
+
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
@@ -168,4 +169,23 @@ body>header {
 	display: inline-block;
 	text-align: center;
 	width: 100%;
+}
+
+/* video download button  */
+ /* Style buttons */
+.download {
+  background-color: DodgerBlue;
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 10px 25px;
+  cursor: pointer;
+  font-size: 13px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+ /* Darker background on mouse-over */
+.download:hover {
+  background-color: RoyalBlue;
 }
