--- a/local_version/front/public/css/style.css
+++ b/local_version/front/public/css/style.css
@@ -129,7 +129,6 @@ body>header {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  padding: 4px;
 }
 
 /* Show the dropdown menu on hover */
@@ -137,7 +136,7 @@ body>header {
 
 .dropdown-content input {
 	width: auto;
-	height: 100%;
+	height: auto;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
@@ -177,9 +176,10 @@ body>header {
   background-color: DodgerBlue;
   border: none;
   color: rgb(0, 0, 0);
-  padding: 10px 25px;
+  padding: 6px 10px;
   cursor: pointer;
   font-size: 13px;
+  border-radius: 8px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
   "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
